--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       max-width: 600px;
       margin: auto;
       text-align: center;
-      background-color: #f9f9f9;
+      background-color: #d9f1ff; /* Light blue background */
     }
     h1 {
       font-size: 2.5rem;
