--- a/quiz.html
+++ b/quiz.html
@@ -70,7 +70,7 @@
 </head>
 <body>
 
-  <h1>Math Quiz</h1>
+  <h1>Starter Quiz</h1>
 
   <div id="timer" class="timer"></div>
   <div id="question-container" class="question-container"></div>
